package com.muhammadsayed.common.util

object TestTag {
    const val MoviesTrending: String = "MoviesTrending"
    const val MoviesClickRow: String = "MoviesClickRow"

    const val DetailsList: String = "DetailsList"
    const val DetailsMovieGenres: String = "DetailsMovieGenres"
    const val DetailsMovieImage: String = "DetailsMovieImage"

    const val BackIcon = "BackIcon"
    const val DetailsLoading = "DetailsLoading"
}